# gnify

./: Cargo.toml
.cargo/: config.toml
crates/libs/base/: Cargo.toml
crates/libs/base/src/: error.rs  lib.rs  model.rs  source.rs  vo.rs
crates/libs/base/src/error/: specific.rs
crates/libs/base/src/source/: postgres.rs
crates/libs/base/src/vo/: id.rs  text.rs  version.rs
crates/libs/core/: Cargo.toml
crates/libs/core/src/: device.rs  lib.rs  role.rs  user.rs
crates/libs/core/src/device/: bmc.rs  view.rs  vo.rs
crates/libs/core/src/device/bmc/: postgres.rs
crates/libs/core/src/role/: bmc.rs  view.rs  vo.rs
crates/libs/core/src/role/bmc/: postgres.rs
crates/libs/core/src/user/: bmc.rs  view.rs  vo.rs
crates/libs/core/src/user/bmc/: postgres.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
src/: api.rs  application.rs  lib.rs  main.rs
