[package]
name = "gnify-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/libs/base", "crates/libs/core", "crates/macros"]

[workspace.dependencies]
serde = { version = "1.0.199", features = ["derive"] }
ulid = { version = "1.1.2", features = ["serde", "uuid"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std", "chrono", "uuid"] }
chrono = { version = "0.4.38", features = ["serde"] }
once_cell = "1.19.0"
regex = "1.10.4"
uuid = "1.8.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
axum = "0.7.5"
axum-login = "0.15.1"
gnify = { version = "0.1.0", path = "crates/libs/base" }
gnify-core = { version = "0.1.0", path = "crates/libs/core" }
phf = { version = "0.11.2", features = ["macros", "serde"] }
smol = "2.0.0"
smol-axum = "0.1.0"
smol-macros = "0.1.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid.workspace = true
