[package]
name = "gnify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
futures-lite = "2.3.0"
gnify-macros = { version = "0.1.0", path = "../../macros" }
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror = "1.0.59"
ulid.workspace = true
