[package]
name = "gnify-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_key = "0.1.0"
argon2 = "0.5.3"
data-encoding = "2.6.0"
gnify = { version = "0.1.0", path = "../base" }
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
sqlx.workspace = true
ulid.workspace = true
uuid = { workspace = true, features = ["serde"] }
